--- a/.github/workflows/build-test-scan.yml
+++ b/.github/workflows/build-test-scan.yml
@@ -256,6 +256,7 @@ jobs:
             docker run --rm   -e RUN_AS_UID=$(id -u) \
               -v "$DATA_DIR":/data \
               -v "$BACKUP_DIR":/backups \
+              -v "$RESTORE_DIR":/restore \
               -v "$BACKUP_D_DIR":/backup.d \
               "$IMAGE" --list-contents  "$archive_basename" \
               --config /etc/dar-backup/dar-backup.conf    --log-stdout --verbose
@@ -689,4 +690,3 @@ jobs:
           git add -f doc/build-test-scan-report.json
           git commit -m "CI summary: run ${{ github.run_id }}" || exit 0
           git push origin HEAD:main
-
